# solana-dapp

./: Anchor.toml  package.json
client/: .eslintrc.json  .prettierrc  craco.config.js  package.json  tsconfig.json
client/src/: App.tsx  index.tsx
client/src/context/: connection.tsx
client/src/contract/: idl.json
client/src/css/: global.css
client/src/pages/: Home.tsx  Vacas.tsx
client/src/routes/: app.routes.tsx
client/src/utils/: constants.ts  program.ts
programs/first/: Cargo.toml
programs/first/src/: lib.rs
tests/: first.ts
